--- a/sdbh/Cargo.toml
+++ b/sdbh/Cargo.toml
@@ -19,6 +19,9 @@ predicates = "3.1.3"
 tempfile = "3.23.0"
 
 # The profile that 'dist' will build with
-[profile.dist]
-inherits = "release"
-lto = "thin"
+# NOTE: This must live at the *workspace root* Cargo.toml to be honored.
+# Kept here for reference; see ../Cargo.toml.
+#
+# [profile.dist]
+# inherits = "release"
+# lto = "thin"
