ci: add allow-dirty to package metadata for cargo-dist

--- a/sdbh/Cargo.toml
+++ b/sdbh/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 repository = "https://github.com/mgd43b/shelldbhist"
 license = "MIT"
 
+[package.metadata.dist]
+allow-dirty = true
+
 [dependencies]
 anyhow = "1.0.100"
 clap = { version = "4.5.53", features = ["derive"] }
