--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -12,4 +12,4 @@ installers = []
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
 # Allow dirty working directory (for manual workflow modifications)
-allow-dirty = true
+allow-dirty = ["*"]
