fix: use allow-dirty array format for file patterns
Set allow-dirty to array of file patterns to allow manual modifications.

--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -12,4 +12,4 @@ installers = []
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
 # Skip checking whether the specified configuration files are up to date
-allow-dirty = true
+allow-dirty = ["*.yml", "*.yaml", "*.toml"]
