--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,6 +109,16 @@ jobs:
           fi
 
           if [[ -z "$tag" ]]; then
+            # For workflow_run we may intentionally skip publishing when this wasn't
+            # a release PR merge.
+            if [[ "${{ github.event_name }}" == "workflow_run" ]]; then
+              echo "No tag resolved; publishing=$publishing. Exiting successfully." >&2
+              echo "tag=" >> "$GITHUB_OUTPUT"
+              echo "tag_flag=" >> "$GITHUB_OUTPUT"
+              echo "publishing=$publishing" >> "$GITHUB_OUTPUT"
+              exit 0
+            fi
+
             echo "No tag could be resolved for event '${{ github.event_name }}'" >&2
             echo "tag=" >> "$GITHUB_OUTPUT"
             echo "tag_flag=" >> "$GITHUB_OUTPUT"
