ci: use CODECOV_TOKEN for enhanced Codecov integration
- Add CODECOV_TOKEN secret to CI workflow for better reliability
- Enable enhanced Codecov features and PR comments
- Improve coverage upload consistency

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Upload to Codecov
         uses: codecov/codecov-action@v4
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: sdbh/lcov.info
           flags: rust
           name: codecov-umbrella
