--- a/sdbh/Cargo.toml
+++ b/sdbh/Cargo.toml
@@ -13,6 +13,7 @@ dirs = "6.0.0"
 rusqlite = { version = "0.38.0", features = ["bundled"] }
 serde = { version = "1.0.228", features = ["derive"] }
 sha2 = "0.10.9"
+terminal_size = "0.4"
 thiserror = "2.0.17"
 time = { version = "0.3.44", features = ["formatting", "macros"] }
 toml = "0.9.10"
