--- a/sdbh/Cargo.toml
+++ b/sdbh/Cargo.toml
@@ -17,6 +17,7 @@ terminal_size = "0.4"
 thiserror = "2.0.17"
 time = { version = "0.3.44", features = ["formatting", "macros"] }
 toml = "0.9.10"
+uuid = { version = "1.0", features = ["v4"] }
 
 [dev-dependencies]
 assert_cmd = "2.1.1"
