docs: update test coverage stats and add lcov.info to gitignore
- Update README test coverage from incorrect '67.2% CLI' to accurate '64.8% overall'
- Add lcov.info to .gitignore (cargo-tarpaulin coverage reports)
- Ensure coverage artifacts are not committed to repository

--- a/.gitignore
+++ b/.gitignore
@@ -162,6 +162,9 @@ coverage*.json
 coverage*.xml
 coverage*.info
 
+# Tarpaulin (cargo-tarpaulin) coverage reports
+lcov.info
+
 # Visual Studio code coverage results
 *.coverage
 *.coveragexml
