--- a/sdbh/Cargo.toml
+++ b/sdbh/Cargo.toml
@@ -9,7 +9,9 @@ license = "MIT"
 anyhow = "1.0.100"
 clap = { version = "4.5.53", features = ["derive"] }
 # (Optional) used to resolve ~/.sdbh.toml robustly.
+dialoguer = "0.11.0"
 dirs = "6.0.0"
+regex = "1.10.6"
 rusqlite = { version = "0.38.0", features = ["bundled"] }
 serde = { version = "1.0.228", features = ["derive"] }
 sha2 = "0.10.9"
