--- a/sdbh/Cargo.toml
+++ b/sdbh/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0.100"
+atty = "0.2"
 clap = { version = "4.5.53", features = ["derive"] }
 # (Optional) used to resolve ~/.sdbh.toml robustly.
 dialoguer = "0.12.0"
